Fixed line-height spacing in the sidebar menu so that wrapped text had a smaller line height than between menu items.

--- a/user/themes/academydeliver/css-compiled/template.css
+++ b/user/themes/academydeliver/css-compiled/template.css
@@ -1144,7 +1144,8 @@ body.error #error {
   list-style: none;
   padding-bottom: 1rem; }
   #sidebar .sidebar-content ul.navigation li {
-    margin-top: 0.2rem; }
+    margin-top: 0.6rem;
+    line-height: 1.3rem; }
     #sidebar .sidebar-content ul.navigation li a i {
       font-size: 0.7rem; }
     #sidebar .sidebar-content ul.navigation li:first-child a {
