--- a/user/themes/academydeliver/scss/template/_sidebar.scss
+++ b/user/themes/academydeliver/scss/template/_sidebar.scss
@@ -8,7 +8,8 @@
             padding-bottom: 1rem;
 
             li {
-                margin-top: 0.2rem;
+                margin-top: 0.6rem;
+                line-height: 1.3rem;
 
                 a i {
                       font-size: 0.7rem;
